make sidebar responsive and fix spacing issues

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
     scroll-behavior: smooth;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 
 .grid-container{
     display: grid;
@@ -27,6 +31,7 @@
     top: 0;
     height: 100vh;
     overflow-y: auto;
+    transition: all 0.2 ease;
 }
 
 .sidebar  .logo  a{
@@ -54,16 +59,24 @@
     font-size: 16px;
 }
 
+
+
+
+.sidebar .nav ul li a{
+    padding: 10px;
+    transition: all 0.2s ease-in;
+}
+
+
 .sidebar .nav ul .selected  {
     background-color: #4dabf7;
-    padding: 10px;
     color: #343131;
 }
 
 
+
 .sidebar .nav ul li a:hover {
     background-color: #4dabf7;
-    padding: 10px;
     color: #343131;
 }
 
@@ -107,4 +120,44 @@
     padding: 4px 5px;
     border: none;
     cursor: pointer;
+}
+
+
+
+
+/* Hide text on small screens */
+
+@media (max-width: 768px) {
+
+    .sidebar {
+        width: 80px;
+        padding: 3px;
+        margin: 0;
+    }
+
+    .sidebar .nav ul .selected {
+        background: none;
+        color: #ececec;
+    }
+
+    .sidebar .logo a {
+        font-size: 12px;
+        display: none;
+    }
+
+    .sidebar .logo a span {
+        display: block;
+    }
+
+
+    .sidebar .nav ul li a span{
+        display: none;
+    }
+
+
+    .sidebar .nav ul li a i {
+        justify-content: center;
+        font-size: 25px;
+    }
+    
 }
